@@ -1,7 +1,1 @@
-Changelog.md
-fujinet-atari-*.lib
-fujinet-fuji.h
-fujinet-fuji.inc
 fujinet-lib-atari-*.zip
-fujinet-network.h
-fujinet-network.inc
